test/spec_vectors/conversions/fail/module_24.wat
(module (func (result f64) (f64.promote_f32 (i32.const 0))))